<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/small_gap"
    tools:context=".MainActivity">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/medium_gap"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/medium_gap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginTop="@dimen/medium_gap"
                android:text="@string/weight_title"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/hint_weight_edit_text"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_gap"
                    android:hint="@string/hint_weight_value"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/text_hint"
                    android:textSize="40dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/large_gap"
                    android:text="@string/kg_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large_gap" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/medium_gap"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/medium_gap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginTop="@dimen/medium_gap"
                android:text="@string/height_title"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/hint_height_edit_text"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_gap"
                    android:hint="@string/hint_height"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/text_hint"
                    android:textSize="40dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/large_gap"
                    android:text="@string/cm_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large_gap" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculate_BMI_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/medium_gap"
        android:layout_marginRight="@dimen/medium_gap"
        android:backgroundTint="@color/btn_background"
        android:text="@string/calculate_button"
        android:textSize="@dimen/medium_gap" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="@dimen/medium_gap"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/medium_gap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/BMI_value_text_view"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginTop="@dimen/medium_gap"
                android:gravity="center"
                android:text="@string/BMI_value"
                android:textColor="@color/white"
                android:textSize="50dp" />

            <TextView
                android:id="@+id/bmi_class_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginTop="@dimen/medium_gap"
                android:gravity="center"
                android:text="@string/weight_class"
                android:textColor="@color/normal_weight"
                android:textSize="@dimen/medium_gap" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginTop="@dimen/small_gap"
                android:gravity="center"
                android:text="@string/normal_range"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/medium_gap" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>